--- a/AgenceLivingRoom/res/layout/fragment_card_front.xml
+++ b/AgenceLivingRoom/res/layout/fragment_card_front.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
+        android:textSize="20dp"
         android:text="@string/contactMailMessage"
         android:gravity="center" />
 	
@@ -41,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="50dp"
+        android:textSize="20dp"
         android:text="@string/infoMail"
         android:autoLink="email"
         android:layout_gravity="center" />
