--- a/AgenceLivingRoom/res/layout/reference_description.xml
+++ b/AgenceLivingRoom/res/layout/reference_description.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/settingsLayout"
-    android:orientation="vertical" >
+    android:id="@+id/referenceLayout"
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
