--- a/AgenceLivingRoom/res/layout/reference_view_pager.xml
+++ b/AgenceLivingRoom/res/layout/reference_view_pager.xml
@@ -1,4 +1,5 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/referenceViewPager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:background="@color/actionbar_background_light" />
