--- a/AgenceLivingRoom/res/menu/home.xml
+++ b/AgenceLivingRoom/res/menu/home.xml
@@ -14,7 +14,7 @@
     	  app:showAsAction="never"/>
     
     <item
-        android:id="@+id/action_about"
+        android:id="@+id/action_info"
         android:orderInCategory="100"
         android:title="@string/action_infos"
         app:showAsAction="never"/>
