Ajout de la description et des details d'une reference

--- a/AgenceLivingRoom/res/layout/fragment_details_reference.xml
+++ b/AgenceLivingRoom/res/layout/fragment_details_reference.xml
@@ -1,7 +1,37 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:textSize="30sp"
-    android:padding="32dp" />
+    android:layout_marginTop="10dp"
+    android:orientation="vertical"
+    >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >   
+<ImageView 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="left"
+    android:src="@drawable/icone_fleche_blanche"
+    />
+<TextView
+    android:id="@+id/textDetailsRef"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="left"
+    android:text="Details de la reference"
+    />
+</LinearLayout>
+
+<TextView  
+    android:id="@+id/textEquipement"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_gravity="left"
+    android:text="Equipements de la reference"
+    android:drawableLeft="@drawable/icone_fleche_blanche" 
+    />
+
+</LinearLayout>
